--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -8,18 +8,16 @@
   </head>
   <body>
     <h1>스타벅스 메뉴</h1>
-    <!--article은 쓰면 안되나?-->
     <div id="menu">
       <h2>메뉴</h2>
 
     </div>
-    <!--id는 camelCase를 써야하고 class는 -을 쓰는게 맞지 않나?-->
     <div id="order-summary">
       <h2>주문 내역</h2>
       <ul id="order-list"></ul>
       <p>총 가격 : &#8361 <span id="total-price">0</span></p>
       <button id="submit-order">주문 제출</button>
     </div>
-    <script type="text/javascript" src="./styles.css"></script>
+    <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
