--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>스타벅스 주문 시스템</title>
-    <link rel="stylesheet" href="./styles.css" />
-  </head>
-  <body>
-    <h1>스타벅스 메뉴</h1>
-    <div id="menu">
-      <h2>메뉴</h2>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Starbucks</title>
+  <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+  <div id="logo">
+    <img src="./starbucks_logo_icon_170705.svg" alt="logo">
+  </div>
 
-    </div>
-    <div id="order-summary">
+  <div id="menu">
+      <h2>메뉴</h2>
+      <!-- 메뉴 아이템이 여기에 추가될 것입니다 -->
+  </div>
+
+  <div id="order-summary">
       <h2>주문 내역</h2>
       <ul id="order-list"></ul>
-      <p>총 가격 : &#8361 <span id="total-price">0</span></p>
+      <p>총 가격: ₩<span id="total-price">0</span></p>
       <button id="submit-order">주문 제출</button>
-    </div>
-    <script type="text/javascript" src="./script.js"></script>
-  </body>
+  </div>
+
+  <script src="./script.js"></script>
+</body>
 </html>
